css: fix z-index

--- a/client/src/components/pages/CommonPageStyles.css
+++ b/client/src/components/pages/CommonPageStyles.css
@@ -5,6 +5,7 @@
 .app-holder {
   display: flex;
   justify-content: space-between;
+  
 }
 
 .dashboard-container {
@@ -12,14 +13,13 @@
   padding-top: 22vh;
   align-items: flex-start;
   margin-top: 2vh;
-  margin-left: 1vh;
-  margin-right: 5vh;
   margin-bottom: 2vh;
+  margin-left: 15vw;
+  margin-right: 10vw;
   width: 160vh;
   min-height: 35vh;
   height: fit-content;
   background-color: rgba(86, 81, 81, 0.1);
-  z-index: 1;
 }
 
 
@@ -28,12 +28,10 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  margin-left: 15vw;
-  margin-right: 10vw;
   height: 80vh;
-  /* background-color:red; */
+  background-color:red;
   background-color: rgba(125,125,125, 0.055);
-  z-index:-12;
+  z-index:1;
 }
 
 
